[gd_scene load_steps=6 format=3 uid="uid://b7lo0pt2nawb4"]

[ext_resource type="Script" uid="uid://dymnr4rghu88n" path="res://ui/menu/game_logs/game_logs_charts.gd" id="1_tcjc5"]
[ext_resource type="PackedScene" uid="uid://dlwq4kmdb3bhs" path="res://addons/easy_charts/control_charts/chart.tscn" id="2_mdcn2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsu8f"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tcjc5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdcn2"]

[node name="GameLogsCharts" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tcjc5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsu8f")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tcjc5")

[node name="LevelChart" parent="Panel/VBoxContainer/Control" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2

[node name="XpChart" parent="Panel/VBoxContainer/Control" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_mdcn2")

[node name="PlayerMaxHealthChart" parent="Panel/VBoxContainer/PanelContainer2" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerHealthChart" parent="Panel/VBoxContainer/PanelContainer2" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2

[node name="DPSChart" parent="Panel/VBoxContainer" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_mdcn2")

[node name="EnemySpawnChart" parent="Panel/VBoxContainer/PanelContainer" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyKillChart" parent="Panel/VBoxContainer/PanelContainer" instance=ExtResource("2_mdcn2")]
unique_name_in_owner = true
layout_mode = 2
